fixed sizes on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -141,10 +141,10 @@ button {
 }
 
 .btn {
-  padding: 0.65em 1.6em;
-  margin: 1.5rem;
+  padding: 0.5em 1.3em;
+  margin: 1.25rem;
   font-weight: 400;
-  font-size: 1.25rem;
+  font-size: 1rem;
   cursor: pointer;
   color: var(--white);
   border: 1px solid var(--grey-600);
@@ -176,6 +176,7 @@ button {
 }
 
 header {
+  z-index: 1000;
   position: fixed;
   top: 0;
   width: 100%;
@@ -230,6 +231,7 @@ main {
 }
 
 footer {
+  z-index: 1000;
   background-color: #0f5132;
   position: fixed;
   bottom: 0;
@@ -242,7 +244,6 @@ footer {
   margin: 1rem;
   max-width: var(--max-width);
   width: var(--fixed-width);
-  min-height: 50%;
   background-color: var(--backgroundColor);
   opacity: 0.9;
   box-shadow: var(--shadow-4);
@@ -261,7 +262,7 @@ footer {
 
 .quote {
   margin: 0;
-  margin-bottom: 3rem;
+  margin-bottom: 1.75rem;
   font-size: 1.563rem;
 }
 
@@ -272,11 +273,35 @@ footer {
 }
 
 .icon {
-  font-size: 5rem;
+  margin-top: 0.5rem;
+  font-size: 3rem;
   color: var(--grey-700);
 }
 
 @media (min-width: 768px) {
+  button {
+  background-color: transparent;
+  border-radius: 0.3em;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  transition: 0.5s;
+
+  font-family: inherit;
+  text-transform: uppercase;
+  color: var(--color);
+  z-index: 1;
+}
+
+.btn {
+  padding: 0.65em 1.6em;
+  margin: 1.5rem;
+  font-size: 1.25rem;
+}
+
+  .icon {
+    font-size: 5rem;
+  }
   .footer-center p {
     margin: 0rem;
   }
@@ -287,6 +312,7 @@ footer {
   }
   .quote {
     font-size: 2.441rem;
+    margin-bottom: 3rem;
   }
   .generator {
     padding: 1rem;
